# kmymoney

kmymoney/plugins/: CMakeLists.txt
kmymoney/plugins/lua/: CMakeLists.txt  kmm_lua.desktop  kmm_lua.rc  luaplugin.cpp  luaplugin.h  luarc
